<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editAdTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTitle"
        android:inputType="text"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editAdDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editDescription"
        android:inputType="text"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editAdPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editPrice"
        android:inputType="numberDecimal"/>
</LinearLayout>
