<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/top_bar_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:elevation="4dp"
            app:title="@string/adDetails"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/ad_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adTitle"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="8dp"/>

                <ImageView
                    android:id="@+id/favorite_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_check_circle_outline_24"
                    android:contentDescription="@string/imageDescription"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/ad_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescription"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp"/>

            <HorizontalScrollView
                android:id="@+id/gallery_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="80dp"
            android:scrollbars="horizontal">

                <LinearLayout
                    android:id="@+id/gallery_layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/ad_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adDescription"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:paddingBottom="16dp"/>

            <TextView
                android:id="@+id/ad_view_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Views: 0"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>


            <TextView
                android:id="@+id/ad_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adStatus"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:paddingBottom="16dp"/>

            <TextView
                android:id="@+id/ad_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kaching"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_dark"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/uploader_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/profilePictureDescription"
                        android:padding="4dp"
                        android:src="@drawable/ic_placeholder" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/uploader_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/uploaderName"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/uploader_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnAddReview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/addReview"
                        android:padding="15dp"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/contact_seller_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactSeller"
                android:textColor="@android:color/white"
                android:layout_margin="16dp"
                android:padding="15dp"/>

            <TextView
                android:id="@+id/reviews_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:nestedScrollingEnabled="false"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
