<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/adTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/adDescription"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/adPrice"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/editTextDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/status_values"
        app:layout_constraintTop_toBottomOf="@id/editTextPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinnerStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/imageViewAd"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintTop_toBottomOf="@id/spinnerLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonSelectImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/imageChoose"
        app:layout_constraintTop_toBottomOf="@id/imageViewAd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonSaveAd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/saveAd"
        app:layout_constraintTop_toBottomOf="@id/buttonSelectImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonMyAds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/myAds"
        app:layout_constraintTop_toBottomOf="@id/buttonSaveAd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
