<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:elevation="8dp"
            android:padding="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutNotLoggedIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="50dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txtSignupEncouragement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/signupEncouragement"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtSignupEncouragement" />

                <Button
                    android:id="@+id/btnRegistration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/registration"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                    app:layout_constraintVertical_bias="0.1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutLoggedIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/windowBackground"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/userPFP"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/profilePictureDescription"
                    android:src="@drawable/ic_outline_boy_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/username"
                    android:inputType="none"
                    android:minHeight="48dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/userPFP" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtUsername" />

                <EditText
                    android:id="@+id/txtContact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtEmail" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtContact" />

                <Spinner
                    android:id="@+id/locationSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/preferredLocation"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtContact" />

                <Spinner
                    android:id="@+id/languageSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/preferredLanguage"
                    android:entries="@array/language_options"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/locationSpinner" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/languageSpinner" />

                <Button
                    android:id="@+id/btnShowReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profileShowReviews"
                    app:layout_constraintTop_toBottomOf="@id/saveButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btnStatistics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profileStatistics"
                    app:layout_constraintTop_toBottomOf="@id/btnShowReviews"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/logout"
                    app:layout_constraintTop_toBottomOf="@id/btnStatistics"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</FrameLayout>
